--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -185,6 +185,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchvision import transforms as T, datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_transform = T.Compose([\n",
+    "    T.Resize(size = (Configuration.img_size,Configuration.img_size)),\n",
+    "    T.RandomRotation(degrees= (-20,+20)),\n",
+    "    T.ToTensor(),\n",
+    "    T.Normalize([0.485,0.456,0.406],[0.229,0.224,0.225])\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
