--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -139,7 +139,7 @@
     "    model_name = 'tf_efficientnet_b4_ns'\n",
     "    img_size = 224\n",
     "     \n",
-    "    DATA_DIR = \"projects/chest_xray\"                        \n",
+    "    DATA_DIR = \"projects/Pneumonia Classification/chest_xray/chest_xray\"                        \n",
     "    TEST = \"projects/chest_xray/test\"                                      \n",
     "    TRAIN = \"projects/chest_xray/train\"                                    \n",
     "    VAL = \"projects/chest_xray/val\"                                         "
