--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -352,6 +352,30 @@
     "print(f'Valid Images Batches {len(validloader)}')\n",
     "print(f'Valid Images: {len(validset)}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'_SingleProcessDataLoaderIter' object has no attribute 'next'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[57], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m dataiter \u001b[38;5;241m=\u001b[39m \u001b[38;5;28miter\u001b[39m(trainloader)\n\u001b[1;32m----> 2\u001b[0m images,labels \u001b[38;5;241m=\u001b[39m \u001b[43mdataiter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnext\u001b[49m()\n\u001b[0;32m      3\u001b[0m out \u001b[38;5;241m=\u001b[39m make_grid(images,nrow\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m)\n\u001b[0;32m      4\u001b[0m show_grid(out,title\u001b[38;5;241m=\u001b[39m[class_name[x] \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m labels])\n",
+      "\u001b[1;31mAttributeError\u001b[0m: '_SingleProcessDataLoaderIter' object has no attribute 'next'"
+     ]
+    }
+   ],
+   "source": [
+    "dataiter = iter(trainloader)\n",
+    "images,labels = dataiter.next()\n",
+    "out = make_grid(images,nrow=4)\n",
+    "show_grid(out,title=[class_name[x] for x in labels])"
+   ]
   }
  ],
  "metadata": {
