--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -375,6 +375,127 @@
     "out = make_grid(images,nrow=4)\n",
     "show_grid(out,title=[class_name[x] for x in labels])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fine Tune Efficient Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting timm\n",
+      "  Downloading timm-1.0.15-py3-none-any.whl.metadata (52 kB)\n",
+      "     ---------------------------------------- 0.0/52.0 kB ? eta -:--:--\n",
+      "     ---------------------------------------  51.2/52.0 kB 1.3 MB/s eta 0:00:01\n",
+      "     -------------------------------------- 52.0/52.0 kB 889.1 kB/s eta 0:00:00\n",
+      "Requirement already satisfied: torch in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from timm) (2.2.1)\n",
+      "Requirement already satisfied: torchvision in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from timm) (0.17.1)\n",
+      "Requirement already satisfied: pyyaml in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from timm) (6.0.1)\n",
+      "Requirement already satisfied: huggingface_hub in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from timm) (0.21.4)\n",
+      "Requirement already satisfied: safetensors in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from timm) (0.4.2)\n",
+      "Requirement already satisfied: filelock in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from huggingface_hub->timm) (3.13.1)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from huggingface_hub->timm) (2024.2.0)\n",
+      "Requirement already satisfied: requests in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from huggingface_hub->timm) (2.32.3)\n",
+      "Requirement already satisfied: tqdm>=4.42.1 in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from huggingface_hub->timm) (4.66.1)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from huggingface_hub->timm) (4.9.0)\n",
+      "Requirement already satisfied: packaging>=20.9 in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from huggingface_hub->timm) (23.2)\n",
+      "Requirement already satisfied: sympy in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from torch->timm) (1.12)\n",
+      "Requirement already satisfied: networkx in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from torch->timm) (3.2.1)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from torch->timm) (3.1.2)\n",
+      "Requirement already satisfied: numpy in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from torchvision->timm) (1.25.2)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from torchvision->timm) (10.3.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from tqdm>=4.42.1->huggingface_hub->timm) (0.4.6)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from jinja2->torch->timm) (2.1.3)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from requests->huggingface_hub->timm) (3.2.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from requests->huggingface_hub->timm) (3.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from requests->huggingface_hub->timm) (2.0.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from requests->huggingface_hub->timm) (2023.7.22)\n",
+      "Requirement already satisfied: mpmath>=0.19 in c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages (from sympy->torch->timm) (1.3.0)\n",
+      "Downloading timm-1.0.15-py3-none-any.whl (2.4 MB)\n",
+      "   ---------------------------------------- 0.0/2.4 MB ? eta -:--:--\n",
+      "   - -------------------------------------- 0.1/2.4 MB 5.1 MB/s eta 0:00:01\n",
+      "   - -------------------------------------- 0.1/2.4 MB 5.1 MB/s eta 0:00:01\n",
+      "   - -------------------------------------- 0.1/2.4 MB 5.1 MB/s eta 0:00:01\n",
+      "   ---- ----------------------------------- 0.3/2.4 MB 1.6 MB/s eta 0:00:02\n",
+      "   ----- ---------------------------------- 0.3/2.4 MB 1.4 MB/s eta 0:00:02\n",
+      "   ------- -------------------------------- 0.4/2.4 MB 1.5 MB/s eta 0:00:02\n",
+      "   -------- ------------------------------- 0.5/2.4 MB 1.6 MB/s eta 0:00:02\n",
+      "   --------- ------------------------------ 0.6/2.4 MB 1.6 MB/s eta 0:00:02\n",
+      "   ---------- ----------------------------- 0.6/2.4 MB 1.6 MB/s eta 0:00:02\n",
+      "   ----------- ---------------------------- 0.7/2.4 MB 1.6 MB/s eta 0:00:02\n",
+      "   ------------- -------------------------- 0.8/2.4 MB 1.6 MB/s eta 0:00:02\n",
+      "   -------------- ------------------------- 0.9/2.4 MB 1.6 MB/s eta 0:00:01\n",
+      "   ---------------- ----------------------- 1.0/2.4 MB 1.7 MB/s eta 0:00:01\n",
+      "   ------------------ --------------------- 1.1/2.4 MB 1.7 MB/s eta 0:00:01\n",
+      "   ------------------- -------------------- 1.2/2.4 MB 1.7 MB/s eta 0:00:01\n",
+      "   --------------------- ------------------ 1.3/2.4 MB 1.8 MB/s eta 0:00:01\n",
+      "   ----------------------- ---------------- 1.4/2.4 MB 1.8 MB/s eta 0:00:01\n",
+      "   ------------------------- -------------- 1.5/2.4 MB 1.8 MB/s eta 0:00:01\n",
+      "   -------------------------- ------------- 1.6/2.4 MB 1.9 MB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 1.7/2.4 MB 1.9 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 1.8/2.4 MB 1.9 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 1.9/2.4 MB 1.9 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 2.0/2.4 MB 1.9 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 2.1/2.4 MB 1.9 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 2.3/2.4 MB 2.0 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 2.4/2.4 MB 2.0 MB/s eta 0:00:00\n",
+      "Installing collected packages: timm\n",
+      "Successfully installed timm-1.0.15\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEPRECATION: Loading egg at c:\\users\\ahmed\\python 3-11-4\\lib\\site-packages\\vboxapi-1.0-py3.11.egg is deprecated. pip 24.3 will enforce this behaviour change. A possible replacement is to use pip for package installation.. Discussion can be found at https://github.com/pypa/pip/issues/12330\n",
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install timm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'timm'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[63], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m nn\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtimm\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'timm'"
+     ]
+    }
+   ],
+   "source": [
+    "from torch import nn\n",
+    "import timm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
