--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2358,14 +2358,15 @@
        "  (classifier): Sequential(\n",
        "    (0): Linear(in_features=1792, out_features=625, bias=True)\n",
        "    (1): ReLU()\n",
-       "    (2): Linear(in_features=625, out_features=256, bias=True)\n",
-       "    (3): ReLU()\n",
-       "    (4): Linear(in_features=256, out_features=2, bias=True)\n",
+       "    (2): Dropout(p=0.3, inplace=False)\n",
+       "    (3): Linear(in_features=625, out_features=256, bias=True)\n",
+       "    (4): ReLU()\n",
+       "    (5): Linear(in_features=256, out_features=2, bias=True)\n",
        "  )\n",
        ")"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2377,12 +2378,22 @@
     "model.classifier = nn.Sequential(\n",
     "    nn.Linear(in_features=1792 , out_features=625),\n",
     "    nn.ReLU(),\n",
+    "    nn.Dropout(p=0.3),\n",
     "    nn.Linear(in_features=625 , out_features=256),\n",
     "    nn.ReLU(),\n",
     "    nn.Linear(in_features=256 , out_features=2),\n",
     ")\n",
     "\n",
     "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchsummary import summary"
    ]
   }
  ],
