--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -3080,6 +3080,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from helper import accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PneumoniaTrainer:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def train_batch_loop(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def valid_batch_loop(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def fit(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
