--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -3089,13 +3089,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class PneumoniaTrainer:\n",
-    "    def __init__(self):\n",
-    "        pass\n",
+    "    def __init__(self, criterion, optimizer, scheduler):\n",
+    "        self.criterion = criterion,\n",
+    "        self.optimizer = optimizer,\n",
+    "        self.scheduler = scheduler\n",
     "    \n",
     "    def train_batch_loop(self):\n",
     "        pass\n",
