--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -3099,14 +3099,22 @@
     "        self.optimizer = optimizer,\n",
     "        self.scheduler = scheduler\n",
     "    \n",
-    "    def train_batch_loop(self):\n",
-    "        pass\n",
+    "    def train_batch_loop(self, model, trainloader):\n",
+    "        train_acc = 0.0\n",
+    "        train_loss = 0.0\n",
+    "        \n",
+    "        for images, labels in trainloader:\n",
+    "            images = images.to(device)\n",
+    "            labels = labels.to(device)\n",
     "    \n",
     "    def valid_batch_loop(self):\n",
     "        pass\n",
     "    \n",
-    "    def fit(self):\n",
-    "        pass"
+    "    def fit(self, model, trainloader, validloader, epochs):\n",
+    "        model = model.to(device)\n",
+    "        for i in range(epochs):\n",
+    "            model.train()\n",
+    "            avg_train_acc, avg_train_loss = self.train_batch_loop(model,trainloader)"
    ]
   },
   {
