--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -3106,6 +3106,17 @@
     "        for images, labels in trainloader:\n",
     "            images = images.to(device)\n",
     "            labels = labels.to(device)\n",
+    "            \n",
+    "            logits = model(images)\n",
+    "            loss = self.criterion(logits)\n",
+    "            \n",
+    "            self.optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            self.optimizer.step()\n",
+    "            \n",
+    "            train_loss += loss.item()\n",
+    "            train_acc += accuracy(logits,labels)\n",
+    "            \n",
     "    \n",
     "    def valid_batch_loop(self):\n",
     "        pass\n",
