--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -3108,7 +3108,7 @@
     "            labels = labels.to(device)\n",
     "            \n",
     "            logits = model(images)\n",
-    "            loss = self.criterion(logits)\n",
+    "            loss = self.criterion(logits,labels)\n",
     "            \n",
     "            self.optimizer.zero_grad()\n",
     "            loss.backward()\n",
@@ -3117,15 +3117,29 @@
     "            train_loss += loss.item()\n",
     "            train_acc += accuracy(logits,labels)\n",
     "            \n",
+    "        return train_acc / len(trainloader) , train_loss / len(trainloader)\n",
+    "    \n",
     "    \n",
     "    def valid_batch_loop(self):\n",
-    "        pass\n",
+    "        valid_acc = 0.0\n",
+    "        valid_loss = 0.0\n",
+    "        \n",
+    "        for images, labels in validloader:\n",
+    "            images = images.to(device)\n",
+    "            labels = labels.to(device)\n",
+    "            \n",
+    "            logits = model(images)\n",
+    "            loss = self.criterion(logits,labels)\n",
+    "            \n",
+    "    \n",
     "    \n",
     "    def fit(self, model, trainloader, validloader, epochs):\n",
     "        model = model.to(device)\n",
     "        for i in range(epochs):\n",
     "            model.train()\n",
-    "            avg_train_acc, avg_train_loss = self.train_batch_loop(model,trainloader)"
+    "            avg_train_acc, avg_train_loss = self.train_batch_loop(model,trainloader)\n",
+    "            model.eval()\n",
+    "            avg_valid_acc,avg_valid_loss = self.valid_batch_loop(model, validloader)"
    ]
   },
   {
