--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -3143,6 +3143,11 @@
     "            logits = model(images)\n",
     "            loss = self.criterion(logits,labels)\n",
     "            \n",
+    "            valid_loss += loss.item()\n",
+    "            valid_acc += accuracy(logits,labels)\n",
+    "            \n",
+    "            return valid_acc / len(validloader) , valid_loss / len(validloader)\n",
+    "            \n",
     "    \n",
     "    \n",
     "    def fit(self, model, trainloader, validloader, epochs):\n",
