--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -3152,11 +3152,14 @@
     "    \n",
     "    def fit(self, model, trainloader, validloader, epochs):\n",
     "        model = model.to(device)\n",
+    "        valid_min_loss = np.Inf\n",
+    "        \n",
     "        for i in range(epochs):\n",
     "            model.train()\n",
     "            avg_train_acc, avg_train_loss = self.train_batch_loop(model,trainloader)\n",
     "            model.eval()\n",
-    "            avg_valid_acc,avg_valid_loss = self.valid_batch_loop(model, validloader)"
+    "            avg_valid_acc,avg_valid_loss = self.valid_batch_loop(model, validloader)\n",
+    "            "
    ]
   },
   {
