--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -3159,6 +3159,9 @@
     "            avg_train_acc, avg_train_loss = self.train_batch_loop(model,trainloader)\n",
     "            model.eval()\n",
     "            avg_valid_acc,avg_valid_loss = self.valid_batch_loop(model, validloader)\n",
+    "            \n",
+    "            if avg_valid_loss <= valid_min_loss:\n",
+    "                print()\n",
     "            "
    ]
   },
