--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -3161,7 +3161,7 @@
     "            avg_valid_acc,avg_valid_loss = self.valid_batch_loop(model, validloader)\n",
     "            \n",
     "            if avg_valid_loss <= valid_min_loss:\n",
-    "                print()\n",
+    "                print(f'Valid loss decreased {valid_min_loss} --> {avg_valid_loss}')\n",
     "            "
    ]
   },
