--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -3162,6 +3162,7 @@
     "            \n",
     "            if avg_valid_loss <= valid_min_loss:\n",
     "                print(f'Valid loss decreased {valid_min_loss} --> {avg_valid_loss}')\n",
+    "                torch.save(model.state_dict())\n",
     "            "
    ]
   },
