--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -3163,6 +3163,7 @@
     "            if avg_valid_loss <= valid_min_loss:\n",
     "                print(f'Valid loss decreased {valid_min_loss} --> {avg_valid_loss}')\n",
     "                torch.save(model.state_dict(),'PneimoniaModel.pt')\n",
+    "                valid_min_loss = avg_valid_loss\n",
     "            "
    ]
   },
