--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -3164,7 +3164,8 @@
     "                print(f'Valid loss decreased {valid_min_loss} --> {avg_valid_loss}')\n",
     "                torch.save(model.state_dict(),'PneimoniaModel.pt')\n",
     "                valid_min_loss = avg_valid_loss\n",
-    "            "
+    "                \n",
+    "            print(f'Epoch: {i+1} Train Loss: {avg_train_loss}  Train Acc: {avg_valid_acc}')"
    ]
   },
   {
