--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -3165,7 +3165,8 @@
     "                torch.save(model.state_dict(),'PneimoniaModel.pt')\n",
     "                valid_min_loss = avg_valid_loss\n",
     "                \n",
-    "            print(f'Epoch: {i+1} Train Loss: {avg_train_loss}  Train Acc: {avg_valid_acc}')"
+    "            print(f'Epoch: {i+1} Train Loss: {avg_train_loss}  Train Acc: {avg_train_acc}')\n",
+    "            print(f'Epoch: {i+1} Valid Loss: {avg_valid_loss}  Valid Acc: {avg_valid_acc}')"
    ]
   },
   {
