--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -3132,7 +3132,7 @@
     "        return train_acc / len(trainloader) , train_loss / len(trainloader)\n",
     "    \n",
     "    \n",
-    "    def valid_batch_loop(self):\n",
+    "    def valid_batch_loop(self, model, validloader):\n",
     "        valid_acc = 0.0\n",
     "        valid_loss = 0.0\n",
     "        \n",
