--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -3080,11 +3080,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from helper import accuracy"
+    "from helper import accuracy\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -3115,7 +3116,7 @@
     "        train_acc = 0.0\n",
     "        train_loss = 0.0\n",
     "        \n",
-    "        for images, labels in trainloader:\n",
+    "        for images, labels in tqdm(trainloader):\n",
     "            images = images.to(device)\n",
     "            labels = labels.to(device)\n",
     "            \n",
@@ -3136,7 +3137,7 @@
     "        valid_acc = 0.0\n",
     "        valid_loss = 0.0\n",
     "        \n",
-    "        for images, labels in validloader:\n",
+    "        for images, labels in tqdm(validloader):\n",
     "            images = images.to(device)\n",
     "            labels = labels.to(device)\n",
     "            \n",
