--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -3203,7 +3203,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from helper import view_classify"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.load_state_dict(torch.load('/content/ColabPneumoniaModel.pt'))\n",
+    "model.eval()\n",
+    "\n",
+    "avg_test_loss, avg_test_acc = trainer.valid_batch_loop(model,testloader)\n",
+    "\n",
+    "\n",
+    "print(\"Test Loss : {}\".format(avg_test_loss))\n",
+    "print(\"Test Acc : {}\".format(avg_test_acc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "\n",
+    "image,label = testset[324]\n",
+    "\n",
+    "ps = model(image.to(device).unsqueeze(0))\n",
+    "ps = F.softmax(ps,dim = 1)\n",
+    "\n",
+    "view_classify(image,ps,label)"
+   ]
   }
  ],
  "metadata": {
