--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -3090,15 +3090,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "class PneumoniaTrainer:\n",
     "    def __init__(self, criterion, optimizer, scheduler):\n",
-    "        self.criterion = criterion,\n",
-    "        self.optimizer = optimizer,\n",
+    "        self.criterion = criterion\n",
+    "        self.optimizer = optimizer\n",
     "        self.scheduler = scheduler\n",
+    "\n",
     "    \n",
     "    def train_batch_loop(self, model, trainloader):\n",
     "        train_acc = 0.0\n",
@@ -3169,13 +3170,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  2%|▏         | 6/326 [00:08<07:48,  1.47s/it]"
+     ]
+    }
+   ],
    "source": [
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(),lr=Configuration.lr)\n",
     "\n",
-    "schedular = None\n",
-    "trainer = PneumoniaTrainer(criterion,optimizer,schedular)\n",
+    "scheduler = None\n",
+    "trainer = PneumoniaTrainer(criterion,optimizer,scheduler)\n",
     "trainer.fit(model,trainloader,validloader,epochs=Configuration.epochs)"
    ]
   },
