--- a/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
+++ b/projects/Pneumonia Classification/Pneumonia Classification using PyTorch.ipynb
@@ -3168,14 +3168,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 6/326 [00:08<07:48,  1.47s/it]"
+      "100%|██████████| 326/326 [09:54<00:00,  1.82s/it]\n",
+      "  0%|          | 0/1 [00:01<?, ?it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss decreased inf --> 0.7340694069862366\n",
+      "Epoch: 1 Train Loss: 0.2534286252114396  Train Acc: 0.8955138325691223\n",
+      "Epoch: 1 Valid Loss: 0.7340694069862366  Valid Acc: 0.5625\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 326/326 [07:13<00:00,  1.33s/it]\n",
+      "  0%|          | 0/1 [00:01<?, ?it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss decreased 0.7340694069862366 --> 0.6804008483886719\n",
+      "Epoch: 2 Train Loss: 0.21417872416872555  Train Acc: 0.9187116622924805\n",
+      "Epoch: 2 Valid Loss: 0.6804008483886719  Valid Acc: 0.6875\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 326/326 [05:13<00:00,  1.04it/s]\n",
+      "  0%|          | 0/1 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 3 Train Loss: 0.18821502509784022  Train Acc: 0.9229294657707214\n",
+      "Epoch: 3 Valid Loss: 0.7502426505088806  Valid Acc: 0.6875\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 326/326 [04:49<00:00,  1.13it/s]\n",
+      "  0%|          | 0/1 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss decreased 0.6804008483886719 --> 0.4592849314212799\n",
+      "Epoch: 4 Train Loss: 0.19122536907235355  Train Acc: 0.9258052110671997\n",
+      "Epoch: 4 Valid Loss: 0.4592849314212799  Valid Acc: 0.8125\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 326/326 [04:56<00:00,  1.10it/s]\n",
+      "  0%|          | 0/1 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 5 Train Loss: 0.1738941502940207  Train Acc: 0.9342408180236816\n",
+      "Epoch: 5 Valid Loss: 0.8589890599250793  Valid Acc: 0.5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 326/326 [04:43<00:00,  1.15it/s]\n",
+      "  0%|          | 0/1 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 6 Train Loss: 0.18246879423482834  Train Acc: 0.9277223944664001\n",
+      "Epoch: 6 Valid Loss: 0.521122932434082  Valid Acc: 0.75\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 326/326 [04:37<00:00,  1.18it/s]\n",
+      "  0%|          | 0/1 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 7 Train Loss: 0.17003327123592235  Train Acc: 0.9330905079841614\n",
+      "Epoch: 7 Valid Loss: 0.6387573480606079  Valid Acc: 0.625\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 326/326 [04:34<00:00,  1.19it/s]\n",
+      "  0%|          | 0/1 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 8 Train Loss: 0.1531556948928014  Train Acc: 0.9382668733596802\n",
+      "Epoch: 8 Valid Loss: 0.5641555190086365  Valid Acc: 0.75\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 326/326 [04:35<00:00,  1.18it/s]\n",
+      "  0%|          | 0/1 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 9 Train Loss: 0.15250991028019348  Train Acc: 0.9440184235572815\n",
+      "Epoch: 9 Valid Loss: 0.599541187286377  Valid Acc: 0.625\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 326/326 [04:35<00:00,  1.18it/s]\n",
+      "  0%|          | 0/1 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 10 Train Loss: 0.14455456230318048  Train Acc: 0.9449769854545593\n",
+      "Epoch: 10 Valid Loss: 0.4979836344718933  Valid Acc: 0.8125\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
